# pynumbie

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
pynumbie/: numbie.py
