[build-system]
# These are the assumed default build requirements from pip:
requires = ["setuptools>=60.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pynumbie"
version = "0.0.1"
authors = [
    {name="akaalena"}
]
requires-python = ">=3.11"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]